<resources>
    <string name="app_name">Flora Driver</string>
    <string name="generalError">an Error Occurred , Please Try Again Later</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgetPassword">Forget Your Password?</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="vendorAddress">Vendor Address:</string>
    <string name="clientAddress">Client Address:</string>
    <string name="changeStatus">Change order status</string>
    <string name="filter">Filter</string>
    <string name="delivered">Delivered</string>
    <string name="shipped">Shipped</string>
    <string name="searchWith">Seach With Number or Name of Order...</string>
    <string name="noConnection">No Internet Connection , Please Check First</string>
    <string name="logout">Logout</string>
    <string name="lang">عربي</string>
    <string name="enterEmail">Enter Your Email</string>
    <string name="invalidEmail">Invalid Email Address</string>
    <string name="enterPassword">Enter Your Password</string>
    <string name="invalidPassword">Invalid Password</string>
    <string name="upcomingOrders">Upcoming Orders</string>
    <string name="currentOrders">Current Orders</string>
    <string name="noOrdersFound">No Orders Found</string>
    <string name="acceptOrder">Accept Order</string>
    <string name="pieces">piece</string>
    <string name="selectStartDate">Select Start Date</string>
    <string name="selectEndDate">Select End Date</string>
    <string name="notShipped">Only order with status with shipped can be marked as delivered.</string>
    <string name="send">Send</string>
    <string name="checkEmail">Check Your Email For Recover Password</string>
    <string name="getDirections">Get Directions</string>
    <string name="acceptedSuccessfully">Order Added To You List Successfully</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
</resources>
