<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/fragment_login_cl_container">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_login_til_emailContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_login_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightGray"
            android:textColor="@color/black"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:textColorHint="@color/grayDark"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_login_til_passwordContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/fragment_login_til_emailContainer"
        app:layout_constraintStart_toStartOf="@+id/fragment_login_til_emailContainer"
        app:layout_constraintTop_toBottomOf="@+id/fragment_login_til_emailContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_login_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightGray"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textColorHint="@color/grayDark" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/fragment_login_tv_forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetPassword"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/fragment_login_tv_login"
        app:layout_constraintStart_toStartOf="@+id/fragment_login_tv_login"
        app:layout_constraintTop_toBottomOf="@+id/fragment_login_tv_login" />

    <TextView
        android:id="@+id/fragment_login_tv_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn"
        android:gravity="center"
        android:text="@string/login"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/fragment_login_til_passwordContainer"
        app:layout_constraintStart_toStartOf="@+id/fragment_login_til_passwordContainer"
        app:layout_constraintTop_toBottomOf="@+id/fragment_login_til_passwordContainer" />

    <include layout="@layout/loading"/>

    <TextView
        android:id="@+id/fragment_login_tv_changeLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lang"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"
        android:padding="10dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>