<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/fragment_upcoming_orders_cl_container">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/fragment_upcoming_orders_ll_startDateContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textColor="@color/grayDark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/fragment_upcoming_orders_tv_startDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableEnd="@drawable/dowen_arrow"
                android:drawablePadding="45dp"
                android:text="@string/startDate"
                android:textColor="@color/black" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="@color/lightGray" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_upcoming_orders_ll_endDateContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textColor="@color/grayDark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/fragment_upcoming_orders_tv_endDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableEnd="@drawable/dowen_arrow"
                android:drawablePadding="45dp"
                android:text="@string/endDate"
                android:textColor="@color/black" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="@color/lightGray" />

        </LinearLayout>

        <ImageView
            android:id="@+id/fragment_upcoming_orders_iv_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimary"
            app:srcCompat="@drawable/check" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_upcoming_orders_rv_orders"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:listitem="@layout/item_order" />

    <include layout="@layout/loading" />

</androidx.constraintlayout.widget.ConstraintLayout>